--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # ========================================
   # BACKEND SERVICES (from HospitalERP.API)
@@ -9,10 +7,10 @@ services:
     image: mcr.microsoft.com/mssql/server:2025-latest
     container_name: hospitalerp-sqlserver
     env_file:
-      - HospitalERP.API/.env
+      - HospitalERP.API/.env  # Optional: has defaults, warning if missing is harmless
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=${DB_PASSWORD}
+      - MSSQL_SA_PASSWORD=${DB_PASSWORD:-YourStrong!Password123}
       - MSSQL_PID=Developer
     ports:
       - "${DB_PORT:-1433}:1433"
@@ -22,7 +20,7 @@ services:
     networks:
       - hospitalerp-network
     healthcheck:
-      test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${DB_PASSWORD} -Q "SELECT 1" || exit 1
+      test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${DB_PASSWORD:-YourStrong!Password123} -Q "SELECT 1" || exit 1
       interval: 10s
       timeout: 5s
       retries: 5
@@ -33,7 +31,7 @@ services:
     image: quay.io/keycloak/keycloak:latest
     container_name: hospitalerp-keycloak
     env_file:
-      - HospitalERP.API/.env
+      - HospitalERP.API/.env  # Optional: has defaults, warning if missing is harmless
     environment:
       - KC_HOSTNAME_STRICT=false
       - KC_HOSTNAME_STRICT_HTTPS=false
@@ -65,14 +63,14 @@ services:
       dockerfile: Dockerfile
     container_name: hospitalerp-api
     env_file:
-      - HospitalERP.API/.env
+      - HospitalERP.API/.env  # Optional: has defaults, warning if missing is harmless
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT:-Development}
       - ASPNETCORE_URLS=http://+:80
-      - DB_SERVER=sqlserver
+      - DB_SERVER=${DB_SERVER:-sqlserver}
       - DB_DATABASE=${DB_DATABASE:-HospitalERP}
       - DB_USER=${DB_USER:-sa}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_PASSWORD=${DB_PASSWORD:-YourStrong!Password123}
       - KEYCLOAK_AUTHORITY=${KEYCLOAK_AUTHORITY:-http://keycloak:8080/realms/hospital-erp}
       - KEYCLOAK_AUDIENCE=${KEYCLOAK_AUDIENCE:-hospital-erp-api,account}
       - KEYCLOAK_REQUIRE_HTTPS=false
@@ -105,9 +103,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: hospitalerp-frontend
+    # env_file is optional - all variables have defaults in environment section
+    # Only load .env files if they exist (docker-compose will warn if missing but continue)
     env_file:
-      - frontend/.env
-      - HospitalERP.API/.env  # Share API env vars
+      - HospitalERP.API/.env  # Optional: only loaded if file exists, has defaults
     environment:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
@@ -121,7 +120,7 @@ services:
       - "${FRONTEND_PORT:-4200}:80"
     volumes:
       # Optional: mount nginx config for customization
-      # - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - hospitalerp-network
     depends_on:
