--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,11 +64,12 @@ services:
       context: ./HospitalERP.API
       dockerfile: ./Dockerfile
     container_name: hospitalerp-api
-    env_file: HospitalERP.API/.env  # Optional: uncomment to use .env file
+    env_file:
+      - ./HospitalERP.API/.env
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT:-Development}
-      - ASPNETCORE_URLS=http://+:80
-      - DB_SERVER=${DB_SERVER:-sqlserver}
+      - ASPNETCORE_URLS=${ASPNETCORE_URLS:-http://+:5037}
+      - DB_SERVER=${DB_SERVER:-localhost}
       - DB_DATABASE=${DB_DATABASE:-HospitalERP}
       - DB_USER=${DB_USER:-sa}
       - DB_PASSWORD=${DB_PASSWORD:-YourStrongPassword123}
@@ -76,7 +77,7 @@ services:
       - KEYCLOAK_AUDIENCE=${KEYCLOAK_AUDIENCE:-hospital-erp-api,account}
       - KEYCLOAK_REQUIRE_HTTPS=false
     ports:
-      - "${API_PORT:-5037}:80"
+      - "${API_PORT:-5037}:5037"
     volumes:
       - ./HospitalERP.API/appsettings.json:/app/appsettings.json:ro
       - ./HospitalERP.API/appsettings.Development.json:/app/appsettings.Development.json:ro
