--- a/HospitalERP.API/appsettings.json
+++ b/HospitalERP.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=HospitalERP;User Id=sa;Password=YourStrong!Password123;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=localhost;Database=HospitalERP;User Id=sa;Password=YourStrongPassword123;TrustServerCertificate=true;MultipleActiveResultSets=true;"
   },
   "Keycloak": {
     "Authority": "http://localhost:8080/realms/hospital-erp",
