fix: Update API port configuration in root docker-compose
- Change ASPNETCORE_URLS to use port 5037
- Update port mapping to 5037:5037
- Fix healthcheck to use port 5037
- Ensure consistency with backend docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT:-Development}
       - ASPNETCORE_URLS=${ASPNETCORE_URLS:-http://+:5037}
-      - DB_SERVER=${DB_SERVER:-localhost}
+      - DB_SERVER=sqlserver
       - DB_DATABASE=${DB_DATABASE:-HospitalERP}
       - DB_USER=${DB_USER:-sa}
       - DB_PASSWORD=${DB_PASSWORD:-YourStrongPassword123}
