fix: fix docker compose depployments and add realm export for keycloak users

--- a/HospitalERP.API/.env.example
+++ b/HospitalERP.API/.env.example
@@ -3,21 +3,23 @@ DB_SERVER=localhost
 DB_PORT=1433
 DB_DATABASE=HospitalERP
 DB_USER=sa
-DB_PASSWORD=YourStrong!Password123
+DB_PASSWORD=YourStrongPassword123
+# Full connection string (optional - will be constructed from above if not provided)
+DB_CONNECTION_STRING=Server=localhost;Database=HospitalERP;User Id=sa;Password=YourStrongPassword123;TrustServerCertificate=true;MultipleActiveResultSets=true;
 
 # Keycloak Configuration (for development)
-KEYCLOAK_AUTHORITY=http://localhost:8080/auth/realms/hospital-erp
-KEYCLOAK_AUDIENCE=hospital-erp-api
+KEYCLOAK_AUTHORITY=http://localhost:8080/realms/hospital-erp
+KEYCLOAK_AUDIENCE=hospital-erp-api,account
 KEYCLOAK_REQUIRE_HTTPS=false
 
 # API Configuration
 ASPNETCORE_ENVIRONMENT=Development
-ASPNETCORE_URLS=http://localhost:5000;https://localhost:5001
+API_PORT=5037
 
 # Keycloak Service Client (for JWT token generation)
 KEYCLOAK_CLIENT_ID=hospital-erp-service-client
 KEYCLOAK_CLIENT_SECRET=your-service-client-secret-here
-KEYCLOAK_TOKEN_ENDPOINT=http://localhost:8080/auth/realms/hospital-erp/protocol/openid-connect/token
+KEYCLOAK_TOKEN_ENDPOINT=http://localhost:8080/realms/hospital-erp/protocol/openid-connect/token
 
 # Keycloak Base URL (alternative to KEYCLOAK_AUTHORITY)
 KEYCLOAK_BASE_URL=http://localhost:8080
