--- a/HospitalERP.API/docker-compose.yml
+++ b/HospitalERP.API/docker-compose.yml
@@ -66,10 +66,11 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:5037
-      - DB_SERVER=sqlserver
+      - DB_SERVER=${DB_SERVER:-sqlserver}
       - DB_DATABASE=${DB_DATABASE:-HospitalERP}
       - DB_USER=${DB_USER:-sa}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_PASSWORD=${DB_PASSWORD:-YourStrongPassword123}
+      - DB_CONNECTION_STRING=${DB_CONNECTION_STRING:-Server=sqlserver;Database=HospitalERP;User Id=sa;Password=YourStrongPassword123;TrustServerCertificate=true;MultipleActiveResultSets=true;}
       - KEYCLOAK_AUTHORITY=${KEYCLOAK_AUTHORITY:-http://keycloak:8080/realms/hospital-erp}
       - KEYCLOAK_AUDIENCE=${KEYCLOAK_AUDIENCE:-hospital-erp-api,account}
       - KEYCLOAK_REQUIRE_HTTPS=false
