--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     # env_file: HospitalERP.API/.env  # Optional: uncomment to use .env file
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=${DB_PASSWORD:-YourStrongPassword123}
-      - MSSQL_USER=${DB_USER:-sa}
+      - MSSQL_SA_PASSWORD=${DB_PASSWORD}
+      - MSSQL_USER=${DB_USER}
       - MSSQL_PID=Developer
     ports:
-      - "${DB_PORT:-1433}:1433"
+      - "${DB_PORT}:1433"
     volumes:
       - ./HospitalERP.API/Scripts/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - ./HospitalERP.API/Scripts/docker-entrypoint.sh:/docker-entrypoint.sh:ro
@@ -22,7 +22,7 @@ services:
     networks:
       - hospitalerp-network
     healthcheck:
-      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${DB_PASSWORD:-YourStrongPassword123} -C -Q "SELECT 1" || exit 1
+      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U ${DB_USER} -P ${DB_PASSWORD} -C -Q "SELECT 1" || exit 1
       interval: 10s
       timeout: 5s
       retries: 5
