--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@primeng/themes": "^21.0.1",
     "chart.js": "^4.5.1",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
