feat: enhance patient management with blood type information
- Added BloodTypeName property to PatientListDto for improved patient data representation.
- Updated mapping in PatientsProfile to include BloodTypeName from the Patient entity.
- Modified frontend model to reflect the new blood type information in patient lists.
- Introduced a new presentation document outlining the Hospital ERP System and its features.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ scripts/__pycache__/get-keycloak-token.cpython-313.pyc
 Final Project.sln
 
 .fake
+.~lock.Hospital_ERP_Presentation.pptx#
+Hospital_ERP_Presentation.pptx
+.gitignore
